Containerised (#392)
* changed starlogo.png

* old changes from Rahul

* Removed almost all log.info statements.

* some recycle bin renaming

* old changes from Rahul

* some recycle bin renaming

* Removed almost all log.info statements.

* removed copyright notice

* Updated RunSolver binary and added its source code to the repository

* finished recycle bin rename in interface

* recycle bin rename fix

* I had missed some renames

* forgot more recycle renaming

* more recycle bin renaming

* changed /starexec/secure/explore/spaces.jsp to have consistent confirmations for removing jobs/solvers/benchmarks etc...

* made dialog boxes bigger

* first approximation of what Terms of Service will look like

* test a few changes to the interface for removing things from spaces.

* more of the same

* more of the same

* test a few changes to the interface for removing things from spaces.

* test a few changes to the interface for removing things from spaces.

* renamed recycle to trash more

* fixed 'All' and 'None' for selecting benchmarks/solvers/etc. and added shift for selecting ranges of rows.

* fixed 'All' and 'None' for selecting benchmarks/solvers/etc. and added shift for selecting ranges of rows.

* Revert "renamed recycle to trash more"

This reverts commit e4703417e80e03285aa0278afa94c376f07a53c1.

* Made it so you can move solvers to trash in hierarchy.

* terms of service update

* made shift-select a little better...still terrible...but better. Should use dataTable.select in the future.

* added IDV (hopefully)

* added GDV (hopefully)

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* updating GDV

* added video folder to public

* disabled graphs on job info page

* disabled more stuff in job details page...perhaps will break

* di